As CSS concern, technology page can now be displayed on tablets. Needs to fix javascript to get mobile images.

--- a/assets/styles/technology.css
+++ b/assets/styles/technology.css
@@ -93,13 +93,17 @@ body{
     background-color: #FFF;
 }
 
+.techAvatarMobile{
+    display: none;
+}
+
 @media (max-width: 966px){
     body{
         background-image: url('/assets/technology/background-technology-tablet.jpg');
     }
     
     #technology{
-        padding: 32px 16px;
+        padding: 32px 0 64px;
     }
 
     #technology .container{
@@ -108,11 +112,12 @@ body{
     }
 
     #technology h1{
-        padding: 0;
+        padding: 0 16px;
     }
 
     #technology .firstCol{
         flex-flow: column-reverse;
+        padding: 64px 16px 0;
     }
 
     .theTermino{
@@ -148,12 +153,20 @@ body{
 
     #technology .secondCol{
         text-align: center;
-        display: none;
     }
 
     .techBtn{
         font-size: 24px;
         width: 50px;
         height: 50px;
+    }
+
+    .techAvatarDesk{
+        display: none;
+    }
+
+    .techAvatarMobile{
+        display: inline;
+        width: calc(100% + 5px);
     }
 }
